--- a/RickMortyApp/app/build.gradle
+++ b/RickMortyApp/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 
     def moshi_version = "1.9.3"
     def retrofit_version = "2.9.0"
+    def lifecycle_version ="2.3.1"
 
     //retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
@@ -51,6 +52,13 @@ dependencies {
 
     //coil
     implementation("io.coil-kt:coil:1.3.0")
+
+
+    //viewmodel
+    implementation"androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    //lifecycle
+    implementation"androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+
 
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
